--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,19 +7,22 @@
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
 
-    /* Bundler mode */
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
 
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "tailwind.config.js", "postcss.config.js", "next-env.d.ts"],
+  "include": [
+    "src",
+    "tailwind.config.js",
+    "postcss.config.js",
+    "next-env.d.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
