--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11"]
-        node-version: ["18.x", "19x", "20.x"]
+        node-version: ["18.x"] # , "19x", "20.x"] apparently the new versions are not available in gh-actions
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
