attempt to build the production target in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,3 +50,11 @@ jobs:
         with:
           dockerfile-target: devel_shell
           image-tag: rasenmaeher_ui:devel_shell
+
+  production:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: pvarki/ci@main
+        with:
+          dockerfile-target: production
+          image-tag: rasenmaeher_ui:production
