--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format": "prettier src --write"
+    "format": "prettier --write ./"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
