--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-progress": "^1.0.3",
     "@tailwindcss/typography": "^0.5.10",
     "@yudiel/react-qr-scanner": "^1.1.10",
     "classnames": "^2.3.2",
