--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-progress": "^1.0.3",
     "@tailwindcss/typography": "^0.5.10",
     "@yudiel/react-qr-scanner": "^1.1.10",
     "classnames": "^2.3.2",
     "formik": "^2.4.5",
+    "i18next": "23.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "14.1.0",
     "react-qr-code": "^2.0.12",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
