--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "classnames": "^2.3.2",
     "formik": "^2.4.5",
     "i18next": "23.10.1",
+    "i18next-chained-backend": "^4.6.2",
+    "i18next-http-backend": "^2.5.0",
+    "i18next-localstorage-backend": "^4.2.0",
+    "i18next-resources-to-backend": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "14.1.0",
