--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "^2.3.2",
     "formik": "^2.4.5",
     "i18next": "23.10.1",
+    "i18next-browser-languagedetector": "^7.2.1",
     "i18next-chained-backend": "^4.6.2",
     "i18next-http-backend": "^2.5.0",
     "i18next-localstorage-backend": "^4.2.0",
