--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "i18next-resources-to-backend": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "14.1.0",
+    "react-i18next": "^14.1.0",
     "react-qr-code": "^2.0.12",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
