--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ src/assets/set/**
 
 
 .env
+src/assets/set/locale/en.json
+src/assets/set/locale/fi.json
+src/assets/set/mainlogo.png
+src/assets/set/outsiderlogo.png
+src/assets/set/setName.txt
