Work in progress saved. This will be rebased later!

--- a/src/views/servicetak/data/Makefile
+++ b/src/views/servicetak/data/Makefile
@@ -3,8 +3,8 @@ all: build
 
 build: tak-en.json tak-fi.json
 
-tak-en.json: *.en.yml
+tak-en.json: *.en.yml build.py Makefile
 	./build.py . json en > tak-en.json
 
-tak-fi.json: *.fi.yml
+tak-fi.json: *.fi.yml build.py Makefile
 	./build.py . json fi > tak-fi.json
