--- a/src/views/servicetak/data/ServiceTakQuickstart.fi.yml
+++ b/src/views/servicetak/data/ServiceTakQuickstart.fi.yml
@@ -1,5 +1,5 @@
 - lang: "fi"
-  type: "view"
+  type: "View"
   name: "ServiceTakQuickStart"
   path: "quickstart"
   body:
@@ -7,8 +7,8 @@
     classes: "pb-10"
     body:
     - type: Layout
-      showNavbar: true,
-      showFooter: true,
+      showNavbar: true
+      showFooter: true
       heroImage: "../../../../assets/heroimages/rakennettu3.jpeg"
       navbarTitle: "serviceTakQuickstartView.navbarTitle"
       backUrl: "/"
