--- a/src/views/products/data/Makefile
+++ b/src/views/products/data/Makefile
@@ -1,7 +1,7 @@
 
 all: build
 
-build: update-rune tak-en.json tak-fi.json
+build: update-rune tak.json
 
 rune:
 	git clone https://github.com/hyperifyio/rune.git rune
@@ -9,8 +9,5 @@ rune:
 update-rune: rune
 	cd rune && git pull
 
-tak-en.json: *.en.yml rune rune/rune Makefile
-	rune/rune . json en > tak-en.json
-
-tak-fi.json: *.fi.yml rune rune/rune Makefile
-	rune/rune . json fi > tak-fi.json
+tak.json: *.yml ./translations/*.json rune rune/rune.py Makefile
+	rune/rune.py . json > $@
