Changed to use ServiceTakUsageCard as custom component in YAML for https://github.com/pvarki/rasenmaeher-ui/issues/10

--- a/src/views/products/data/ServiceTak.yml
+++ b/src/views/products/data/ServiceTak.yml
@@ -37,10 +37,7 @@
                 type: div
                 body:
                 - "serviceTak.step3Description"
-          - type: ServiceProductUsageCard
-            title: "serviceTakUsageCard.title"
-            body:
-            - "serviceTakUsageCard.content"
+          - type: ServiceTakUsageCard
           - type: div
             classes:
             - "flex"
