Refactored to use newer Rune implementation https://github.com/pvarki/rasenmaeher-ui/issues/10

--- a/src/views/products/data/Makefile
+++ b/src/views/products/data/Makefile
@@ -9,5 +9,8 @@ rune:
 update-rune: rune
 	cd rune && git pull
 
-tak.json: *.yml ./translations/*.json rune rune/rune.py Makefile
+clean:
+	rm -f tak.json
+
+tak.json: *.yml *.html ./translations/*.json rune rune/rune.py Makefile
 	rune/rune.py . json > $@
