Added support for livelog user guide

--- a/src/views/products/data/Makefile
+++ b/src/views/products/data/Makefile
@@ -1,7 +1,7 @@
 
 all: build
 
-build: update-rune tak.json
+build: update-rune tak.json livelog.json
 
 rune:
 	git clone https://github.com/hyperifyio/rune.git rune
@@ -10,7 +10,10 @@ update-rune: rune
 	cd rune && git pull
 
 clean:
-	rm -f tak.json
+	rm -f tak.json livelog.json
 
-tak.json: tak/*.yml tak/*.html tak/translations rune rune/rune.py Makefile
+tak.json: tak/*.yml tak/*.html  tak/*.md tak/translations rune rune/rune.py Makefile
 	rune/rune.py tak json > $@
+
+livelog.json: livelog/*.md rune rune/rune.py Makefile
+	rune/rune.py livelog json > $@
