Fixed tak HTML documentation files

--- a/src/views/products/data/Makefile
+++ b/src/views/products/data/Makefile
@@ -12,7 +12,7 @@ update-rune: rune
 clean:
 	rm -f tak.json livelog.json
 
-tak.json: tak/**/*.yml tak/**/*.html tak/**/*.tsx tak/**/*.md tak/**/*.json rune rune/rune.py Makefile
+tak.json: tak/**/*.yml tak/**/*.html tak/**/*.json rune rune/rune.py Makefile
 	rune/rune.py tak json > $@
 
 livelog.json: livelog/**/*.html livelog/**/*.md livelog/**/*.json rune rune/rune.py Makefile
